ceammc/ext/src/lib/lex/parser_color.cpp

#line 1 "lex/parser_color.rl"
# include "parser_color.h"
# include "ragel_common.h"
# include "parser_numeric.h"
# include "ceammc_convert.h"
# include "ceammc_random.h"

# include <cstdint>
# include <cstring>

namespace ceammc {
namespace parser {

// for autogenerated ragel internals
struct ColorRagelData {
    int r { 0 };
    int g { 0 };
    int b { 0 };
    int a { 0 };
    int x { 0 };
    void setHex(std::uint32_t c) {
        r = (c & 0xFF0000) >> 16;
        g = (c & 0x00FF00) >> 8;
        b = c & 0x0000FF;
    }
    void setLighter(int perc) {
        perc = clip<int, 0, 100>(perc);
        r += perc * (255 - r) / 100;
        g += perc * (255 - g) / 100;
        b += perc * (255 - b) / 100;
    }
    void setDarker(int perc) {
        perc = clip<int, 0, 100>(perc);
        r += perc * (-r) / 100;
        g += perc * (-g) / 100;
        b += perc * (-b) / 100;
    }
    void setRandom() {
        random::RandomGen gen;
        r = gen.gen_uniform_int(0, 255);
        g = gen.gen_uniform_int(0, 255);
        b = gen.gen_uniform_int(0, 255);
    }
};

RgbHexFullMatch::RgbHexFullMatch()
{
    reset();
}

void RgbHexFullMatch::reset()
{
    color_ = {};
}

bool RgbHexFullMatch::parse(const Atom& a)
{
    if (a.isSymbol())
        return parse(a.asT<t_symbol*>()->s_name);
    else
        return false;
}

size_t RgbHexFullMatch::parse(const AtomListView& lv, SmallColorVec& out)
{
    const size_t N = lv.size();

    for (size_t i = 0; i < N; i++) {
        const auto& a = lv[i];
        if (!parse(a))
            return i;

        out.push_back(asInt());
    }

    return N;
}

bool RgbHexFullMatch::parse(const char* str)
{
    auto len = strlen(str);
    if (len == 4)
        return parseShort(str, len);
    else if(len == 7)
        return parseFull(str, len);
    else
        return false;
}


#line 93 "lex/parser_color.cpp"
static const int color_start = 1;
static const int color_first_final = 8;
static const int color_error = 0;

static const int color_en_main = 1;


#line 95 "lex/parser_color.rl"


bool RgbHexFullMatch::parseFull(const char* str, size_t len)
{
    int cs = 0;
    const char* p = str;
    const char* pe = p + len;
    const char* eof = pe;
    ColorRagelData color;
    AtomCategory ragel_cat {CAT_UNKNOWN};
    AtomType ragel_type    {TYPE_UNKNOWN};

    reset();

    
#line 117 "lex/parser_color.cpp"
	{
	cs = color_start;
	}

#line 110 "lex/parser_color.rl"
    
#line 124 "lex/parser_color.cpp"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	if ( (*p) == 35 )
		goto st2;
	goto st0;
st0:
cs = 0;
	goto _out;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr2;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr2;
	} else
		goto tr2;
	goto st0;
tr2:
#line 5 "lex/ragel_color.rl"
	{ color.x = xchar2digit((*p)); }
#line 6 "lex/ragel_color.rl"
	{ (color.x *= 16) += xchar2digit((*p)); }
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 160 "lex/parser_color.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr3;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr3;
	} else
		goto tr3;
	goto st0;
tr3:
#line 6 "lex/ragel_color.rl"
	{ (color.x *= 16) += xchar2digit((*p)); }
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
#line 178 "lex/parser_color.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr4;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr4;
	} else
		goto tr4;
	goto st0;
tr4:
#line 11 "lex/ragel_color.rl"
	{color.r = color.x;}
#line 5 "lex/ragel_color.rl"
	{ color.x = xchar2digit((*p)); }
#line 6 "lex/ragel_color.rl"
	{ (color.x *= 16) += xchar2digit((*p)); }
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
#line 200 "lex/parser_color.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr5;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr5;
	} else
		goto tr5;
	goto st0;
tr5:
#line 6 "lex/ragel_color.rl"
	{ (color.x *= 16) += xchar2digit((*p)); }
	goto st6;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
#line 218 "lex/parser_color.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr6;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr6;
	} else
		goto tr6;
	goto st0;
tr6:
#line 12 "lex/ragel_color.rl"
	{color.g = color.x;}
#line 5 "lex/ragel_color.rl"
	{ color.x = xchar2digit((*p)); }
#line 6 "lex/ragel_color.rl"
	{ (color.x *= 16) += xchar2digit((*p)); }
	goto st7;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
#line 240 "lex/parser_color.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr7;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr7;
	} else
		goto tr7;
	goto st0;
tr7:
#line 6 "lex/ragel_color.rl"
	{ (color.x *= 16) += xchar2digit((*p)); }
	goto st8;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
#line 258 "lex/parser_color.cpp"
	goto st0;
	}
	_test_eof2: cs = 2; goto _test_eof; 
	_test_eof3: cs = 3; goto _test_eof; 
	_test_eof4: cs = 4; goto _test_eof; 
	_test_eof5: cs = 5; goto _test_eof; 
	_test_eof6: cs = 6; goto _test_eof; 
	_test_eof7: cs = 7; goto _test_eof; 
	_test_eof8: cs = 8; goto _test_eof; 

	_test_eof: {}
	if ( p == eof )
	{
	switch ( cs ) {
	case 8: 
#line 13 "lex/ragel_color.rl"
	{color.b = color.x;}
#line 14 "lex/ragel_color.rl"
	{ ragel_cat = CAT_COLOR; ragel_type = TYPE_HEX; }
	break;
#line 279 "lex/parser_color.cpp"
	}
	}

	_out: {}
	}

#line 111 "lex/parser_color.rl"

    const auto ok = cs >= 8;
    if(ok) {
        color_.r = color.r;
        color_.g = color.g;
        color_.b = color.b;
    }

    return ok;
}


#line 299 "lex/parser_color.cpp"
static const int rgb_color_short_start = 1;
static const int rgb_color_short_first_final = 5;
static const int rgb_color_short_error = 0;

static const int rgb_color_short_en_main = 1;


#line 128 "lex/parser_color.rl"


bool RgbHexFullMatch::parseShort(const char* str, size_t length)
{
    int cs = 0;
    const char* p = str;
    const char* pe = p + length;
    const char* eof = pe;
    ColorRagelData color;
    AtomCategory ragel_cat {CAT_UNKNOWN};
    AtomType ragel_type    {TYPE_UNKNOWN};

    reset();

    
#line 323 "lex/parser_color.cpp"
	{
	cs = rgb_color_short_start;
	}

#line 143 "lex/parser_color.rl"
    
#line 330 "lex/parser_color.cpp"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	if ( (*p) == 35 )
		goto st2;
	goto st0;
st0:
cs = 0;
	goto _out;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr2;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr2;
	} else
		goto tr2;
	goto st0;
tr2:
#line 22 "lex/ragel_color.rl"
	{ color.x = xchar2digit((*p)); }
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 364 "lex/parser_color.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr3;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr3;
	} else
		goto tr3;
	goto st0;
tr3:
#line 27 "lex/ragel_color.rl"
	{color.r = color.x;}
#line 22 "lex/ragel_color.rl"
	{ color.x = xchar2digit((*p)); }
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
#line 384 "lex/parser_color.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr4;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr4;
	} else
		goto tr4;
	goto st0;
tr4:
#line 28 "lex/ragel_color.rl"
	{color.g = color.x;}
#line 22 "lex/ragel_color.rl"
	{ color.x = xchar2digit((*p)); }
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
#line 404 "lex/parser_color.cpp"
	goto st0;
	}
	_test_eof2: cs = 2; goto _test_eof; 
	_test_eof3: cs = 3; goto _test_eof; 
	_test_eof4: cs = 4; goto _test_eof; 
	_test_eof5: cs = 5; goto _test_eof; 

	_test_eof: {}
	if ( p == eof )
	{
	switch ( cs ) {
	case 5: 
#line 29 "lex/ragel_color.rl"
	{color.b = color.x;}
#line 30 "lex/ragel_color.rl"
	{ ragel_cat = CAT_COLOR; ragel_type = TYPE_HEX; }
	break;
#line 422 "lex/parser_color.cpp"
	}
	}

	_out: {}
	}

#line 144 "lex/parser_color.rl"

    const auto ok = cs >= 5;
    if(ok) {
        color_.r = color.r | (color.r << 4);
        color_.g = color.g | (color.g << 4);
        color_.b = color.b | (color.b << 4);
    }

    return ok;

    return false;
}

RgbaHexFullMatch::RgbaHexFullMatch()
{
    reset();
}

void RgbaHexFullMatch::reset()
{
    color_ = {};
}

bool RgbaHexFullMatch::parse(const Atom& a)
{
    if (a.isSymbol())
        return parse(a.asT<t_symbol*>()->s_name);
    else
        return false;
}

bool RgbaHexFullMatch::parse(const char* str, size_t len)
{
    if (len == 4 || len == 5)
        return parseShort(str, len);
    else if(len == 7 || len == 9)
        return parseFull(str, len);
    else
        return false;
}

bool RgbaHexFullMatch::parse(const char* str)
{
    return parse(str, strlen(str));
}


#line 477 "lex/parser_color.cpp"
static const int rgba_color_start = 1;
static const int rgba_color_first_final = 9;
static const int rgba_color_error = 0;

static const int rgba_color_en_main = 1;


#line 196 "lex/parser_color.rl"


bool RgbaHexFullMatch::parseFull(const char* str, size_t length)
{
    int cs = 0;
    const char* p = str;
    const char* pe = p + length;
    const char* eof = pe;
    ColorRagelData color;
    color.a = 0xff;
    AtomCategory ragel_cat {CAT_UNKNOWN};
    AtomType ragel_type = {TYPE_UNKNOWN};

    reset();

    
#line 502 "lex/parser_color.cpp"
	{
	cs = rgba_color_start;
	}

#line 212 "lex/parser_color.rl"
    
#line 509 "lex/parser_color.cpp"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	if ( (*p) == 35 )
		goto st2;
	goto st0;
st0:
cs = 0;
	goto _out;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr2;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr2;
	} else
		goto tr2;
	goto st0;
tr2:
#line 38 "lex/ragel_color.rl"
	{ color.x = xchar2digit((*p)); }
#line 39 "lex/ragel_color.rl"
	{ (color.x *= 16) += xchar2digit((*p)); }
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 545 "lex/parser_color.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr3;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr3;
	} else
		goto tr3;
	goto st0;
tr3:
#line 39 "lex/ragel_color.rl"
	{ (color.x *= 16) += xchar2digit((*p)); }
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
#line 563 "lex/parser_color.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr4;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr4;
	} else
		goto tr4;
	goto st0;
tr4:
#line 45 "lex/ragel_color.rl"
	{color.r = color.x;}
#line 38 "lex/ragel_color.rl"
	{ color.x = xchar2digit((*p)); }
#line 39 "lex/ragel_color.rl"
	{ (color.x *= 16) += xchar2digit((*p)); }
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
#line 585 "lex/parser_color.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr5;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr5;
	} else
		goto tr5;
	goto st0;
tr5:
#line 39 "lex/ragel_color.rl"
	{ (color.x *= 16) += xchar2digit((*p)); }
	goto st6;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
#line 603 "lex/parser_color.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr6;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr6;
	} else
		goto tr6;
	goto st0;
tr6:
#line 46 "lex/ragel_color.rl"
	{color.g = color.x;}
#line 38 "lex/ragel_color.rl"
	{ color.x = xchar2digit((*p)); }
#line 39 "lex/ragel_color.rl"
	{ (color.x *= 16) += xchar2digit((*p)); }
	goto st7;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
#line 625 "lex/parser_color.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr7;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr7;
	} else
		goto tr7;
	goto st0;
tr7:
#line 39 "lex/ragel_color.rl"
	{ (color.x *= 16) += xchar2digit((*p)); }
	goto st9;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
#line 643 "lex/parser_color.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr9;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr9;
	} else
		goto tr9;
	goto st0;
tr9:
#line 47 "lex/ragel_color.rl"
	{color.b = color.x;}
#line 38 "lex/ragel_color.rl"
	{ color.x = xchar2digit((*p)); }
#line 39 "lex/ragel_color.rl"
	{ (color.x *= 16) += xchar2digit((*p)); }
	goto st8;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
#line 665 "lex/parser_color.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr8;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr8;
	} else
		goto tr8;
	goto st0;
tr8:
#line 39 "lex/ragel_color.rl"
	{ (color.x *= 16) += xchar2digit((*p)); }
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
#line 683 "lex/parser_color.cpp"
	goto st0;
	}
	_test_eof2: cs = 2; goto _test_eof; 
	_test_eof3: cs = 3; goto _test_eof; 
	_test_eof4: cs = 4; goto _test_eof; 
	_test_eof5: cs = 5; goto _test_eof; 
	_test_eof6: cs = 6; goto _test_eof; 
	_test_eof7: cs = 7; goto _test_eof; 
	_test_eof9: cs = 9; goto _test_eof; 
	_test_eof8: cs = 8; goto _test_eof; 
	_test_eof10: cs = 10; goto _test_eof; 

	_test_eof: {}
	if ( p == eof )
	{
	switch ( cs ) {
	case 9: 
#line 47 "lex/ragel_color.rl"
	{color.b = color.x;}
#line 50 "lex/ragel_color.rl"
	{ ragel_cat = CAT_COLOR; ragel_type = TYPE_HEX; }
	break;
	case 10: 
#line 48 "lex/ragel_color.rl"
	{color.a = color.x;}
#line 50 "lex/ragel_color.rl"
	{ ragel_cat = CAT_COLOR; ragel_type = TYPE_HEX; }
	break;
#line 712 "lex/parser_color.cpp"
	}
	}

	_out: {}
	}

#line 213 "lex/parser_color.rl"

    const auto ok = cs >= 9;
    if(ok) {
        color_.r = color.r;
        color_.g = color.g;
        color_.b = color.b;
        color_.a = color.a;
    }

    return ok;
}


#line 733 "lex/parser_color.cpp"
static const int rgba_color_short_start = 1;
static const int rgba_color_short_first_final = 5;
static const int rgba_color_short_error = 0;

static const int rgba_color_short_en_main = 1;


#line 231 "lex/parser_color.rl"


bool RgbaHexFullMatch::parseShort(const char* str, size_t length)
{
    int cs = 0;
    const char* p = str;
    const char* pe = p + length;
    const char* eof = pe;
    ColorRagelData color;
    color.a = 0xff;
    AtomCategory ragel_cat {CAT_UNKNOWN};
    AtomType ragel_type = {TYPE_UNKNOWN};

    reset();

    
#line 758 "lex/parser_color.cpp"
	{
	cs = rgba_color_short_start;
	}

#line 247 "lex/parser_color.rl"
    
#line 765 "lex/parser_color.cpp"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	if ( (*p) == 35 )
		goto st2;
	goto st0;
st0:
cs = 0;
	goto _out;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr2;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr2;
	} else
		goto tr2;
	goto st0;
tr2:
#line 58 "lex/ragel_color.rl"
	{ color.x = xchar2digit((*p)); }
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 799 "lex/parser_color.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr3;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr3;
	} else
		goto tr3;
	goto st0;
tr3:
#line 63 "lex/ragel_color.rl"
	{color.r = color.x;}
#line 58 "lex/ragel_color.rl"
	{ color.x = xchar2digit((*p)); }
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
#line 819 "lex/parser_color.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr4;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr4;
	} else
		goto tr4;
	goto st0;
tr4:
#line 64 "lex/ragel_color.rl"
	{color.g = color.x;}
#line 58 "lex/ragel_color.rl"
	{ color.x = xchar2digit((*p)); }
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
#line 839 "lex/parser_color.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr5;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto tr5;
	} else
		goto tr5;
	goto st0;
tr5:
#line 65 "lex/ragel_color.rl"
	{color.b = color.x;}
#line 58 "lex/ragel_color.rl"
	{ color.x = xchar2digit((*p)); }
	goto st6;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
#line 859 "lex/parser_color.cpp"
	goto st0;
	}
	_test_eof2: cs = 2; goto _test_eof; 
	_test_eof3: cs = 3; goto _test_eof; 
	_test_eof4: cs = 4; goto _test_eof; 
	_test_eof5: cs = 5; goto _test_eof; 
	_test_eof6: cs = 6; goto _test_eof; 

	_test_eof: {}
	if ( p == eof )
	{
	switch ( cs ) {
	case 5: 
#line 65 "lex/ragel_color.rl"
	{color.b = color.x;}
#line 67 "lex/ragel_color.rl"
	{ ragel_cat = CAT_COLOR; ragel_type = TYPE_HEX; }
	break;
	case 6: 
#line 66 "lex/ragel_color.rl"
	{color.a = color.x;}
#line 67 "lex/ragel_color.rl"
	{ ragel_cat = CAT_COLOR; ragel_type = TYPE_HEX; }
	break;
#line 884 "lex/parser_color.cpp"
	}
	}

	_out: {}
	}

#line 248 "lex/parser_color.rl"

    const auto ok = cs >= 5;
    if(ok) {
        color_.r = color.r | (color.r << 4);
        color_.g = color.g | (color.g << 4);
        color_.b = color.b | (color.b << 4);
        color_.a = color.a | (color.a << 4);
    }

    return ok;
}

ColorFullMatch::ColorFullMatch()
{
    reset();
}

void ColorFullMatch::reset()
{
    color_ = {};
}

bool ColorFullMatch::parse(const Atom& a)
{
    if (a.isSymbol())
        return parse(a.asT<t_symbol*>()->s_name);
    else
        return false;
}


#line 923 "lex/parser_color.cpp"
static const int named_color_start = 1;
static const int named_color_first_final = 62;
static const int named_color_error = 0;

static const int named_color_en_main = 1;


#line 284 "lex/parser_color.rl"


bool ColorFullMatch::parse(const char* str, size_t len)
{
    if (len == 0)
        return false;

    if (str[0] == '#') {
        RgbaHexFullMatch p;
        if (p.parse(str)) {
            color_ = p.color();
            return true;
        } else {
            return false;
        }
    } else {
        int cs = 0;
        const char* p = str;
        const char* pe = p + strlen(str);
        const char* eof = pe;
        ColorRagelData color;
        DECLARE_RAGEL_COMMON_VARS;
        DECLARE_RAGEL_NUMERIC_VARS;

        reset();

        
#line 959 "lex/parser_color.cpp"
	{
	cs = named_color_start;
	}
